# humanitarian-analysis

./: .gitignore  README.md  pyproject.toml  setup.py
src/: __init__.py
src/humanitarian_analysis/: assessment_results_generation.py
